--- a/technoshop-cms/index.html
+++ b/technoshop-cms/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 
+  <script type="module" src="script/index.js"></script>
 </head>
 
 <body>
