--- a/technoshop-cms/index.html
+++ b/technoshop-cms/index.html
@@ -129,7 +129,7 @@
         <div class="modal-dialog">
           <form class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" name="header">Добавить новый товар</h5>
+              <h5 class="modal-title">Добавить новый товар</h5>
               <button type="button" class="btn-close" aria-label="Закрыть модальное окно"></button>
             </div>
             <div class="modal-body">
@@ -140,11 +140,7 @@
                 <div class="col-12 col-sm-6">
                   <input type="text" class="form-control" name="category" list="category" placeholder="Категория" aria-label="Категория товара(eng/rus)" required>
                   <datalist id="category">
-                    <option value="phone"></option>
-                    <option value="car"></option>
-                    <option value="bike"></option>
-                    <option value="fruit"></option>
-                    <option value="house"></option>
+
                 </datalist>
                 </div>
                 <div class="col-12">
